updated: scss spacing fixed

--- a/src/components/SideTitle/SideTitle.module.scss
+++ b/src/components/SideTitle/SideTitle.module.scss
@@ -37,4 +37,14 @@
     font-size: 40px;
     transform: rotate(270deg);
   }
+
+  &__icon {
+    width: 50px;
+    height: 50px;
+
+    svg {
+      width: 100%;
+      height: 100%;
+    }
+  }
 }
